--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 RAPIDAPI_KEY=2671a8bd5dmsh1b8aef5c003ee92p1e07b6jsnce8c9cee4235
 RENTSPREE_KEY=optional_if_you_have_it
 REALTY_MOLE_KEY=optional_if_you_have_it
+GROQ_API_KEY=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
